--- a/item-service/src/main/resources/bootstrap.yml
+++ b/item-service/src/main/resources/bootstrap.yml
@@ -5,6 +5,6 @@ spring:
   application:
     name: item-service
   datasource:
-    url: jdbc:h2:file:~/data/item
+    url: jdbc:h2:mem:item
 server:
   port: 8200
