--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -5,6 +5,6 @@ spring:
   application:
     name: user-service
   datasource:
-    url: jdbc:h2:file:~/data/user
+    url: jdbc:h2:mem:user
 server:
   port: 8100
